log
Wed 10 May 2023 03:53:40 PM UTC: 
 tests:  0|4
total_score: 0/70
8811f3a
Wed 10 May 2023 04:17:08 PM UTC: 
 heap.c | 29 +++++++++++------------------
 1 file changed, 11 insertions(+), 18 deletions(-)
 tests:  1|3
total_score: 10/70
883e0d9
Wed 10 May 2023 04:19:29 PM UTC: 
 heap.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
76156ad
Wed 10 May 2023 05:51:21 PM UTC: 
 heap.c | 31 +++++++++++++++++++++++++++++--
 1 file changed, 29 insertions(+), 2 deletions(-)
In file included from test.c:4:
heap.c: In function ‘heap_push’:
heap.c:45:11: error: assignment to ‘heapElem *’ {aka ‘struct nodo *’} from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   45 |     array = (int *)realloc(array, sizeof(int) * (1 + pq->capac * 2));
      |           ^
cc1: all warnings being treated as errors
Compilation failed
ba783f5
Wed 10 May 2023 05:52:24 PM UTC: 
 heap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|2
total_score: 20/70
efaee9a
Wed 10 May 2023 05:54:07 PM UTC: 
 heap.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  6|2
total_score: 35/70
dd03725
